<resources>
    <string name="app_name">e-voting-mobile</string>
    <string name="title_activity_main">EVoting-Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E-Voting Mobile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_user_details">User information</string>

    <string name="login">LogIn</string>
    <string name="logout">LogOut</string>
    <string name="e_voting">E-Voting</string>
    <string name="login_text">Login</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="login_text_btn">Login</string>
    <string name="logo">Logo</string>
    <string name="title_activity_history_">History_Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_history">History_Activity</string>
    <string name="roles_prompt">*Choose your role</string>
    <string-array name="roles">
        <item>ADMIN</item>
        <item>VOTER</item>
        <item>CANDIDATE</item>
    </string-array>
</resources>